2005-12-07  Murray Cumming <murrayc@murrayc.com>

	* cairomm/context.cc:
	* cairomm/context.h: font_extents(), stroke_extents(), 
	glyph_extents(), fill_extents(): Add get_ prefix and 	
	make them const.

2005-12-07  Murray Cumming <murrayc@murrayc.com>

	* cairomm/context.cc:
	* cairomm/context.h: Add typedef for Matrix, though we 
	probably want to derive a class with a C++-like matrix 
	API, with operator overloading.

2005-12-07  Murray Cumming <murrayc@murrayc.com>

	* cairomm/exception.cc:
	* cairomm/exception.h: Rename to logic_error, because 
	the cairo documentation says that most of them are 
	programming errors, not runtime errors. Derive from 
	std::logic_error because of this.
	* cairomm/private.cc:
	* cairomm/private.h: Throw std::bad_alloc for memory 
	errors, and std::io_base::failure for read/write runtime 
	errors, as suggested by the cairo language-binding 
	documentation.

2005-12-07  Murray Cumming <murrayc@murrayc.com>

	* cairomm/context.cc:
	* cairomm/fontoptions.cc:
	* cairomm/surface.cc: Check for errors in 
	constructors, as per the error-handling advice in the 
	language bindings section of the cairo documentation.

2005-12-07  Murray Cumming <murrayc@murrayc.com>

	* cairomm/context.cc:
	* cairomm/context.h: Change mask_surface() to 
	mask() and set_source_surface() to set_source(), 
	as per the method overloading advice in the 
	language bindings section of the cairo documentation.

0.2.0:

2005-12-02  Murray Cumming <murrayc@murrayc.com>

	* cairomm/cairomm.h: Put sensible stuff in here, 
	instead of my copy/paste stuff from libxml++.
	* cairomm/context.cc:
	* cairomm/context.h:
	* cairomm/enums.h:
	* cairomm/exception.cc:
	* cairomm/exception.h:
	* cairomm/fontface.cc:
	* cairomm/fontface.h:
	* cairomm/fontoptions.cc:
	* cairomm/fontoptions.h:
	* cairomm/path.cc:
	* cairomm/path.h:
	* cairomm/pattern.cc:
	* cairomm/pattern.h:
	* cairomm/private.cc:
	* cairomm/private.h:
	* cairomm/surface.cc: